FF-1495 - fixed nav menu logo size issue when navmenu collapsed

--- a/Client/Shared/MainLayout/MainLayout.razor.scss
+++ b/Client/Shared/MainLayout/MainLayout.razor.scss
@@ -84,7 +84,7 @@
                 height: 2.5rem;
                 background-size: cover;
                 background-repeat: no-repeat;
-                svg {
+                svg, img {
                     display:none;
                 }
             }
